Add more cake! 🎂🍰

--- a/presentation/meetup_help.ipynb
+++ b/presentation/meetup_help.ipynb
@@ -139,20 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "img = qrcode.make('https://farischebib.is')\n",
-    "img.save('imgs/qr/farischebib.is.png')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -798,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -818,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1501,7 +1487,8 @@
     }
    },
    "source": [
-    "This is a tradition I copied from the SLUG. I got my first web application development book about this. It was about ruby on rails -- which is why I'm a Django guy now :)"
+    "This is a tradition I copied from the SLUG. I got my first web application development book about this. It was about ruby on rails -- which is why I'm a Django guy now :)\n",
+    "An orange pi is like a raspberry pi, but you can buy more than one of them at a time."
    ]
   },
   {
@@ -1534,7 +1521,9 @@
     }
    },
    "source": [
-    "There's even cake!"
+    "Invite family & friends. Even new members should feel welcome! \n",
+    "Also, be sure to stock up on raffle prizes! \n",
+    "... there's even cake!"
    ]
   },
   {
@@ -1545,19 +1534,32 @@
     }
    },
    "source": [
-    "![](imgs/meetup/anniversary-3rd.jpg)"
+    "<center><img src=imgs/meetup/anniversary-1st.jpg></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=imgs/meetup/anniversary-2nd.jpg></center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "Invite family & friends. Even new members should feel welcome! \n",
-    "Also, be sure to stock up on raffle prizes! "
+    "<center><img src=imgs/meetup/anniversary-3rd.jpg></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=imgs/meetup/anniversary-5th.jpg></center>"
    ]
   },
   {
